# booking-service

./: .env.example  Cargo.toml  README.md
migrations/2018-04-23-091733_create_rooms_table/: up.sql
src/: lib.rs  main.rs  service.rs
src/handlers/: resources.rs
src/models/: mod.rs
